Docked windows resized on unlock with vertical shelf position

It is because there is a new added shelf state: SHELF_ALIGNMENT_BOTTOM_LOCKED for locked state, and it can change the display work area some time from locked state to unlocked state.

BUG=622431
TEST=manually test saw bug goes away.

Review-Url: https://codereview.chromium.org/2092863004
Cr-Commit-Position: refs/heads/master@{#402120}

Former-commit-id: 074006e2e9f8c05f624876b54abc07fbb4658215